...
                actions: [
                    Action(
                        label: "Unlink all brokers",
                        action: self.deleteLinkedBrokers
                    ),
                    Action(
                        label: "Advanced options",
                        action: {
                            if let advancedViewController = self.storyboard?.instantiateViewController(withIdentifier: "EXAMPLE_VIEW_ADVANCED_ID") as? ExampleViewController {
                                self.advancedViewController = advancedViewController
                                advancedViewController.sections = self.advancedSections
                                self.navigationController?.pushViewController(advancedViewController, animated: true)
                            }
...
                                    print("=====> Selected linked broker account: \(selectedLinkedBrokerAccount)")

                                    self.alertManager.showAlertWithMessageOnly(
                                        onViewController: self.advancedViewController,
                                        withTitle: "Selected Account!",
                                        withMessage: "Selected linked broker account: \(selectedLinkedBrokerAccount)",
                                        withActionTitle: "OK"
                                    )
                                }
                            )
                        }
                    ),
                    Action(
                        label: "Alert Queue",
                        action: self.launchAlertQueue
                    ),
                    Action(
                        label: "Toggle Ads",
                        action: {
                            TradeItSDK.isAdServiceEnabled = !TradeItSDK.isAdServiceEnabled
...
                    ),
                    YahooAction(
                        label: "Launch Trading - Sell",
                        action: {
                            let order = TradeItOrder()

                            order.symbol = "GE"
                            order.action = .sell
                            TradeItSDK.yahooLauncher.launchTrading(
                                fromViewController: self.advancedViewController,
                                withOrder: order,
                                onViewPortfolioTappedHandler: { presentedViewController, linkedBrokerAccount in
                                    print("=====> GO TO PORTFOLIO \(String(describing: linkedBrokerAccount?.accountNumber))...")
...

    private func manualSyncLinkedBrokers() {
        let remoteBrokersToSync = [
            LinkedBrokerData( // dummy
                userId: "8091528839474618b3ac",
                userToken: "1cnfDaldPirJd%2Fx%2FoY%2B0Yiifv5VInjitqLeeOdnbhYrfNI9zah0ShW25%2Fb%2FaW6gjb9dLE9Sl2Jjp%2Ba1UZ8y%2FQYD8cg3y%2FbDFOfloy6y3DlRruu%2FHpE0DqJJHGXjqBH778yuBek5jz%2BYlEo4oCJQiWg%3D%3D",
                broker: "Dummy",
                brokerLongName: "Dummy Broker",
                accounts: []
            ),
            LinkedBrokerData( // dummySecurity
                userId: "2c715289128670019caa",
                userToken: "BsBCjg%2BKbSZ%2Fz9E2ipGcsEyoBW6V8oeybjVYozCjb6ClF0af56DvuDPa1bFi8Sm5eWPoXGD8PpLuCtcnf%2FugTVaJxoaobtAJknBew%2FkFWK6PV%2BRbHW6hXFMUtWp%2BUMjpkQbW6XNEz9NGoYF%2BzCYGzg%3D%3D",
...
        })
    }

    private func launchAlertQueue() {
        self.alertManager.showAlertWithMessageOnly(
            onViewController: self.advancedViewController,
            withTitle: "Alert 1",
            withMessage: "Alert 1",
            withActionTitle: "OK",
            onAlertActionTapped: {}
        )

        let securityQuestion = TradeItSecurityQuestionResult()
        securityQuestion.securityQuestion = "Security Question"

        self.alertManager.promptUserToAnswerSecurityQuestion(
            securityQuestion, onViewController: self.advancedViewController, onAnswerSecurityQuestion: { _ in }, onCancelSecurityQuestion: {}
        )

        self.alertManager.showAlertWithMessageOnly(
            onViewController: self.advancedViewController,
            withTitle: "Alert 2",
            withMessage: "Alert 2",
            withActionTitle: "OK",
            onAlertActionTapped: {}
        )
    }

...
