...
            }
        } else {
            alertController.addTextField(configurationHandler: { textField in
                textField.isSecureTextEntry = true
            })
            let submitAction = UIAlertAction(
                title: "Submit",
                style: .default,
                handler: { action in
                    let textField = alertController.textFields![0] as UITextField
                    onAnswerSecurityQuestion(textField.text!)
                }
            )
...
