...
        <scene sceneID="NcV-Ai-op4">
            <objects>
                <viewController storyboardIdentifier="TRADE_IT_PORTFOLIO_ACCOUNT_DETAILS_VIEW" title="Portfolio" automaticallyAdjustsScrollViewInsets="NO" id="RrX-jG-hg3" customClass="TradeItPortfolioAccountDetailsViewController" customModule="TradeItIosTicketSDK2" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="XhO-vw-bt8"/>
...
                                                                            <rect key="frame" x="20" y="8" width="20" height="20"/>
                                                                        </activityIndicatorView>
                                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="100" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gtl-8c-b2X" userLabel="
                                                                            <rect key="frame" x="65" y="3" width="117.5" height="30"/>
                                                                            <color key="backgroundColor" red="0.43413115860000001" green="0.70186484260000004" blue="0.24602658599999999" alpha="1" colorSpace="calibratedRGB"/>
...
                                                                            </constraints>
                                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                            <state key="normal" title="BUY">
                                                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                            </state>
...
                                                                            </connections>
                                                                        </button>
                                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="100" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="25w-rU-iGD" userLabel="
                                                                            <rect key="frame" x="192.5" y="3" width="117.5" height="30"/>
                                                                            <color key="backgroundColor" red="0.80336724640000001" green="0.1110295822" blue="0.1589897062" alpha="0.80926724139999995" colorSpace="calibratedRGB"/>
...
                                                                            </constraints>
                                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                            <state key="normal" title="SELL">
                                                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                            </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="pEU-b3-oI8"/>
                    <connections>
                        <outlet property="activityIndicator" destination="EO7-43-1uc" id="Dxn-f9-dwt"/>
...
        <scene sceneID="Uej-tc-O6r">
            <objects>
                <viewController storyboardIdentifier="TRADE_IT_TRADING_PREVIEW_VIEW" title="Preview" automaticallyAdjustsScrollViewInsets="NO" id="mZZ-q3-U3W" customClass="TradeItTradePreviewViewController" customModule="TradeItIosTicketSDK2" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="LDU-0f-JMd"/>
...
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <inset key="titleEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
                                <state key="normal" title="Place order">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
        <scene sceneID="xD8-IT-zP1">
            <objects>
                <viewController storyboardIdentifier="TRADE_IT_TRADING_CONFIRMATION_VIEW" title="Confirmation" id="AUL-pz-v3k" customClass="TradeItTradingConfirmationViewController" customModule="TradeItIosTicketSDK2" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="qXR-zx-InJ"/>
...
        <scene sceneID="cZD-MG-chY">
            <objects>
                <viewController storyboardIdentifier="TRADE_IT_TRADING_TICKET_VIEW" title="Trade" id="gnJ-6E-rKZ" userLabel="Trade" customClass="TradeItTradingTicketViewController" customModule="TradeItIosTicketSDK2" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="7Xa-sP-lI6"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <state key="normal" title="Preview order">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
